// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`не кидает ошибку, если продуктов нет, и не пытается их добавить к заявке 1`] = `
Array [
  "CREDIT_APPLICATION_PUBLISH_PENDING",
  "CREDIT_APPLICATION_UPDATE_PENDING",
  "CREDIT_APPLICATION_UPDATE_SUCCESS",
  "CREDIT_PRODUCTS_GET_PENDING",
  "CREDIT_PRODUCTS_GET_SUCCESS",
  "CREDIT_APPLICATION_UPDATE_PENDING",
  "CREDIT_APPLICATION_UPDATE_SUCCESS",
  "CREDIT_APPLICATION_PUBLISH_SUCCESS",
]
`;

exports[`обновляет и активирует кредитную заявку, добавляет продукты 1`] = `
Array [
  "CREDIT_APPLICATION_PUBLISH_PENDING",
  "CREDIT_APPLICATION_UPDATE_PENDING",
  "CREDIT_APPLICATION_UPDATE_SUCCESS",
  "CREDIT_PRODUCTS_GET_PENDING",
  "CREDIT_PRODUCTS_GET_SUCCESS",
  "CREDIT_APPLICATION_UPDATE_PENDING",
  "CREDIT_APPLICATION_UPDATE_SUCCESS",
  "CREDIT_APPLICATION_ADD_PRODUCTS_PENDING",
  "CREDIT_APPLICATION_ADD_PRODUCTS_SUCCESS",
  "CREDIT_APPLICATION_PUBLISH_SUCCESS",
]
`;
